# homelab

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .stylelintignore  AGENTS.md  CLAUDE.md  README.md  bootstrap.sh  delete.py  deployments.md  docker-registry-plan.md  package-lock.json  package.json  plan.md  postcss.config.js  pyproject.toml  pyrightconfig.json  requirements.txt  secrets.md  setup_services.py  staging-plan.md  start_all.sh  testing-plan.md  todo.md
.github/: dependabot.yml
blog/: Dockerfile  README.md  blog_template.html.jinja2  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  generate_blog.py  requirements.txt  start.sh
common/: __init__.py  app.py  app_test.py  health.py  health_test.py  log.py  log_test.py  settings.py  settings_test.py  templates.py  templates_test.py
dashboard/: Dockerfile  README.md  docker-compose.yml  requirements.txt  start.sh
docs/: deployments.md  secrets.md
games/: Dockerfile  __init__.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  plan.md  requirements.txt  start.sh
homepage/: Dockerfile  README copy.md  blog_template.html  blog_template.html.jinja2  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  generate_blog.py  start.sh
llm/: README.md  docker-compose.yml
monitoring/: README.md  alloy-config.alloy  docker-compose.yml  prometheus.yml  promtail-config.yaml  start.sh
mortgage-calc/: Dockerfile  README.md  docker-compose.yml  start.sh
mortgage-calculator/: Dockerfile  docker-compose.yml
networking/: .env.example  README.md  authorized-emails.txt  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  start.sh  traefik.yml  update_cloudflare.sh
(+440 files in other folders)
