[project]
name = "homelab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Alphabetical order
    "click>=8.2,<9",
    "exifread>=3.5,<4",
    "fastapi>=0.116,<1",
    "geopy>=2.4,<3",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "markdown>=3.8,<4",
    "pillow>=12.1,<13",
    "pillow-heif>=1.1,<2",
    "pydantic>=2.11,<3",
    "python-frontmatter>=1.1,<2",
    "python-multipart>=0.0.20,<1",
    "sqlmodel>=0.0.24,<1",
    "uvicorn>=0.35,<1",
    "websockets>=16.0,<17",
]

[dependency-groups]
dev = [
    # Alphabetical order
    "ipython>=9.4,<10",
    "pre-commit>=4.3,<5",
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "ruff>=0.12,<1",
]


[tool.ruff]
# Line and indent settings
line-length = 88
indent-width = 4

# Python 3.12
target-version = "py312"



[tool.ruff.format]
# Single quotes and space indents
quote-style = "single"
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
# Codes to fix
select = ["I", "E", "F", "UP", "B"]
# Don't automatically fix unused imports
unfixable = ["F401"]
# Ignore B008
ignore = ["B008"]

[tool.coverage.run]
source = ["."]
omit = ["*_test.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.pytest.ini_options]
# Filter out SQLAlchemy warnings about duplicate class names in registry
# This occurs when multiple modules define models with the same class name (e.g., Location)
# but with different table names (e.g., maps_location vs photos_location)
filterwarnings = [
    "default::DeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]